--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,13 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Log in to Azure and ACR
+      - name: Log in
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-          enable-AzPSSession: true
       
-      - name: 'Build and push container image'
-        run: |
-          docker build src -f src/Wpm.Management.Api/Dockerfile -t ${{secrets.ACR_LOGIN_SERVER}}/wpm-management-api:${{github.sha}}
-          docker push ${{ secrets.ACR_LOGIN_SERVER }}/wpm-management-api:${{ github.sha }}
