--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,12 @@ jobs:
           docker build src -f src/Wpm.Management.Api/Dockerfile -t ${{ secrets.ACR_LOGIN_SERVER}}/wpm-management-api:${{env.DATE_TIME}}.${{github.run_number}}
           docker push ${{ secrets.ACR_LOGIN_SERVER }}/wpm-management-api:${{env.DATE_TIME}}.${{github.run_number}}
 
-      - name: Deploy to Container Apps
+      - name: 'Build and push Management container image'
+        run: |
+          docker build src -f src/Wpm.Clinic.Api/Dockerfile -t ${{ secrets.ACR_LOGIN_SERVER}}/wpm-clinic-api:${{env.DATE_TIME}}.${{github.run_number}}
+          docker push ${{ secrets.ACR_LOGIN_SERVER }}/wpm-clinic-api:${{env.DATE_TIME}}.${{github.run_number}}
+
+      - name: Deploy to Management Container Apps
         uses: azure/container-apps-deploy-action@v2
         with:
           acrName: ${{ secrets.ACR_USERNAME }}
@@ -41,9 +46,15 @@ jobs:
           containerAppName: wpm-management
           resourceGroup: CNCF
           imageToDeploy: ${{ secrets.ACR_LOGIN_SERVER }}/wpm-management-api:${{ env.DATE_TIME }}.${{ github.run_number }}
-<<<<<<< HEAD
+      
+      - name: Deploy to Clinic Container Apps
+        uses: azure/container-apps-deploy-action@v2
+        with:
+          acrName: ${{ secrets.ACR_USERNAME }}
+          acrUsername: ${{ secrets.ACR_USERNAME }}
+          acrPassword: ${{ secrets.ACR_PASSWORD }}
+          containerAppName: wpm-clinic
+          resourceGroup: CNCF
+          imageToDeploy: ${{ secrets.ACR_LOGIN_SERVER }}/wpm-clinic-api:${{ env.DATE_TIME }}.${{ github.run_number }}
 
-          
-=======
-          environmentVariables: Logging__LogLevel__Microsoft.EntityFrameworkCore=Debug
->>>>>>> 1c5b1875b60605d212c80ad1ddd81095ff147334
+      
