--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,7 @@ jobs:
           containerAppName: wpm-management
           resourceGroup: CNCF
           imageToDeploy: ${{ secrets.ACR_LOGIN_SERVER }}/wpm-management-api:${{ env.DATE_TIME }}.${{ github.run_number }}
+          environmentVariables: Logging__LogLevel__Microsoft.EntityFrameworkCore=Debug
       
       - name: Deploy to Clinic Container Apps
         uses: azure/container-apps-deploy-action@v2
@@ -56,5 +57,5 @@ jobs:
           containerAppName: wpm-clinic
           resourceGroup: CNCF
           imageToDeploy: ${{ secrets.ACR_LOGIN_SERVER }}/wpm-clinic-api:${{ env.DATE_TIME }}.${{ github.run_number }}
-
+          environmentVariables: Logging__LogLevel__Microsoft.EntityFrameworkCore=Debug, Wpm__ManagementUri=http://wpm-management
       
